--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,14 @@ pandas = "^2.0.3"
 numpy = "^1.25.2"
 loguru = "^0.7.0"
 python-frontmatter = "^1.0.0"
-#cmsc-canvas-tools = {path = "../../ssg-canvas-cli/dist/cmsc_canvas_tools-0.3.0-py3-none-any.whl"}
+cnvsapi = {path = "./helpers/cnvsapi-0.5.3-py3-none-any.whl"}
+tasl = {path = "./helpers/tasl-0.1.2-py3-none-any.whl"}
 nbformat = "^5.9.2"
 matplotlib-venn = "^0.11.9"
 revealjs = "^0.2.10"
 python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.22"
 pymysql = "^1.1.0"
-
-
 
 [build-system]
 requires = ["poetry-core"]
