--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cmsc408-course-admin"
+name = "cmsc408-course-admin1"
 version = "0.2.1"
 description = ""
 authors = ["John Leonard <jdleonard@vcu.edu>"]
@@ -28,6 +28,7 @@ python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.22"
 pymysql = "^1.1.0"
 text2qti = "^0.7.1"
+cryptography = "^43.0.3"
 
 [build-system]
 requires = ["poetry-core"]
