--- a/sp2025/lectures/_quarto.yml
+++ b/sp2025/lectures/_quarto.yml
@@ -7,6 +7,7 @@ project:
   render:
     - "lect*.qmd"
     - "index.qmd"
+    - "course*.qmd"
 
 date-format: "dddd - MMM D, YYYY"
 from: markdown+emoji
