playing with gantts

--- a/sp2025/Makefile
+++ b/sp2025/Makefile
@@ -1,5 +1,31 @@
 
 
+.PHONY: help test all
+
+help.title = This help message
+help:
+	@echo "Available targets:"
+	@awk -F '[:=]' '\
+		/^[a-zA-Z0-9_-]+:/ && !/^[.](PHONY|help):/ { \
+			target = $$1; \
+			if (!(target in titles)) { \
+				titles[target] = "no title provided"; \
+			} \
+			order[++count] = target; \
+		} \
+		/^[a-zA-Z0-9_-]+[.]title[[:space:]]*=/ { \
+			split($$1, parts, "."); \
+			target = parts[1]; \
+			titles[target] = $$2; \
+			gsub(/^[ \t]+/, "", titles[target]); \
+		} \
+		END { \
+			for (i = 1; i <= count; i++) { \
+				target = order[i]; \
+				printf "  %-15s %s\n", target, titles[target]; \
+			} \
+		}' Makefile
+
 test:
 	@echo "shell: $(SHELL)"
 	@echo "make_host: $(MAKE_HOST)"
@@ -9,11 +35,12 @@ test:
 	@pwd
 	cnvsapi --version
 	quarto --version
-	awk --version
-	sed --version
-	grep --version
+	awk --version | grep -oP 'GNU Awk \K[0-9.]+'
+	sed --version | grep -oP '(?<=\(GNU sed\) )[0-9.]+'
+	grep --version | grep -oP '(?<=\(GNU grep\) )[0-9.]+'
 
 
+all.title = Rebuild site from scratch
 all:
 	cnvsapi --version
 	cd gantts; quarto render
