--- a/sp2025/details/Makefile
+++ b/sp2025/details/Makefile
@@ -3,3 +3,6 @@
 all:
 	quarto render
 	cnvsapi freshen canvas-details-from-disk --all --confirm
+
+frontpages:
+	cnvsapi freshen canvas-frontpages-from-outline --all
