--- a/sp2025/details/Makefile
+++ b/sp2025/details/Makefile
@@ -6,3 +6,9 @@ all:
 
 frontpages:
 	cnvsapi freshen canvas-frontpages-from-outline --all
+
+2 :
+	quarto render week-$(@)-details.qmd
+	cnvsapi freshen canvas-details-from-disk --include-words=week-$(@) --confirm
+	cnvsapi freshen canvas-frontpages-from-outline --include-weeks=$(@)
+
