--- a/homeworks/Makefile
+++ b/homeworks/Makefile
@@ -1,17 +1,22 @@
-
 -include ~/.makefilehelp
 
-from-term = fa2024
-to-term = sp2025
-from-crse = cmsc408
-to-crse = cmsc408
+help.title = Use to clone or create homework assignments
+
+# cmsc408-sp2025-hw3-autograder
+courses := cmsc408 cmsc427
+terms := fa2023 sp2024 fa2024 sp2025
+hw-sp2025 := hw1 hw2 hw3 hw4 hw5 hw6 hw7 hw8 hw9 del4 del5 del6 del7
+hw-fa2024 := hw1 hw2 hw3 hw4 hw5 hw6 hw7 hw8 hw9 del9
+folders := autograder template
+
+# Makefile helpers
 
 extract = $(word $(2), $(subst -, ,$(1)))
-gh-repo-create-options = --source=. --private --remote=upstream
+repo4 = $(subst $(eval) $(eval),-,$(foreach item,1 2 3 4,$(call extract,$(1),$(item))))
+repo3 = $(subst $(eval) $(eval),-,$(foreach item,1 2 3,$(call extract,$(1),$(item))))
 
-homeworks := hw1 hw2 hw3 hw4 hw5 hw6 hw7 hw8 hw9 hw10 hw11 hw12 hw13
-autograder-copy-targets := $(foreach hw,$(homeworks),$(hw)-autograder-copy)
-template-copy-targets := $(foreach hw,$(homeworks),$(hw)-template-copy)
+gh-repo-create-options = --source=. --private --remote=upstream
+repo-root = cmsc-vcu
 
 # this adds a new-line to any macro.  use $(\n)
 define \n
@@ -19,30 +24,39 @@ define \n
 
 endef
 
-hw-repo-copy.title = "make hw-repo-copy" for help
-hw-repo-copy:
-	@echo Copy previous term repo to new term
-	@echo ex: make hw3-template-copy
-	@echo ex: make hw3-autograder-copy
+# Targets
+repo-targets := $(foreach course,$(courses),$(foreach term,$(terms),$(foreach folder,$(folders),$(foreach hw,$(hw-$(term)),$(course)-$(term)-$(hw)-$(folder)))))
+assignment-roots := $(foreach course,$(courses),$(foreach term,$(terms),$(foreach hw,$(hw-$(term)),$(course)-$(term)-$(hw))))
+repo-clone := $(foreach repo,$(repo-targets),$(repo)-clone)
 
+# cmsc408-sp2025-hw5-autograder-clone - runs recipe to clone or create repo as necessary
+$(repo-clone) : ; $(recipe-hw-repo-clone)
 
-define recipe-hw-repo-copy
-	gh repo clone cmsc-vcu/$(from-crse)-$(from-term)-$(call extract,$(@),1)-$(call extract,$(@),2)  $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2)
-	rm -fR $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2)/.git
-	cd $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2) && git init && git branch -M main && git add -A && git commit -a -m "initial copy from $(from-term)"
-	cd $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2) && gh repo create cmsc-vcu/$(to-crse)-$(to-term)-$(call extract,$(@),1)-$(call extract,$(@),2) $(gh-repo-create-options)
-	cd $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2) && git push --set-upstream upstream main
+# cmsc408-sp2025-hw5-clone : cmsc408-sp2025-hw5-autograder-clone  cmsc408-sp2025-hw5-template-clone
+$(foreach root,$(assignment-roots),$(eval $(root)-clone : $(foreach folder,$(folders),$(root)-$(folder)-clone )))
+
+define recipe-hw-repo-clone
+	@if [ ! -d "$(call extract,$(@),3)/$(call extract,$(@),2)/$(call extract,$(@),4)" ]; then \
+		if gh repo view $(repo-root)/$(call repo4,$(@)) --json name >/dev/null 2>&1; then \
+			echo "Repository exists: $(repo-root)/$(call repo4,$(@))"; \
+			gh repo clone $(repo-root)/$(call repo4,$(@)) $(call extract,$(@),3)/$(call extract,$(@),2)/$(call extract,$(@),4); \
+			cd $(call extract,$(@),3)/$(call extract,$(@),2)/$(call extract,$(@),4) && \
+			gh repo set-default $(repo-root)/$(call repo4,$(@)); \
+		else \
+			echo "Creating repo: cmsc-vcu/$(call repo4,$(@))"; \
+			mkdir -p $(call extract,$(@),3)/$(call extract,$(@),2)/$(call extract,$(@),4) && \
+			cd $(call extract,$(@),3)/$(call extract,$(@),2)/$(call extract,$(@),4) && \
+			echo "# $(repo-root)/$(call repo4,$(@))" > README.md && \
+			git init && git branch -m main && git add -A && git commit -a -m "initial push" && \
+			gh repo create $(repo-root)/$(call repo4,$(@)) $(gh-repo-create-options) && \
+			git push --set-upstream upstream main; \
+		fi; \
+		if [ "$(call extract,$(@),4)" = "template" ]; then \
+			echo "Setting $(repo-root)/$(call repo4,$(@)) to template repo" && \
+			gh repo edit $(repo-root)/$(call repo4,$(@)) --template; \
+		fi; \
+	else \
+		echo "No clone. Folder already exists: $(call extract,$(@),3)/$(call extract,$(@),2)/$(call extract,$(@),4)"; \
+	fi
 endef
-
-define recipe-mark-as-template
-	cd $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2) && gh repo edit cmsc-vcu/$(to-crse)-$(to-term)-$(call extract,$(@),1)-$(call extract,$(@),2) --template
-endef
-
-define recipe-copy-autograder-makefile
-	cp -f hw1/$(to-term)/$(call extract,$(@),2)/Makefile $(call extract,$(@),1)/$(to-term)/$(call extract,$(@),2)/Makefile
-endef
-
-
-$(template-copy-targets) : ; $(recipe-hw-repo-copy) $(\n) $(recipe-mark-as-template)
-$(autograder-copy-targets) : ; $(recipe-hw-repo-copy) $(\n) $(recipe-copy-autograder-makefile)
 
