--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ sqlalchemy = "^2.0.22"
 pymysql = "^1.1.0"
 text2qti = "^0.7.1"
 cryptography = "^43.0.3"
+click = "^8.1.8"
 
 [build-system]
 requires = ["poetry-core"]
