--- a/sp2025/details/Makefile
+++ b/sp2025/details/Makefile
@@ -1,13 +1,16 @@
 
 
-all:
-	quarto render
-	cnvsapi freshen canvas-details-from-disk --all --confirm
+-include ~/.makefilehelp
+
+
+weeks := welcome 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
 
 frontpages:
 	cnvsapi freshen canvas-frontpages-from-outline --all
 
-1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17:
+all: $(weeks)
+
+$(weeks):
 	cnvsapi freshen local-details-from-outline --include-weeks=$(@)
 	quarto render week-$(@)-details.qmd
 	cnvsapi freshen canvas-details-from-disk --include-words=week-$(@) --confirm
