--- a/sp2025/details/Makefile
+++ b/sp2025/details/Makefile
@@ -13,6 +13,6 @@ all: $(weeks)
 $(weeks):
 	cnvsapi freshen local-details-from-outline --include-weeks=$(@)
 	quarto render week-$(@)-details.qmd
-	cnvsapi freshen canvas-details-from-disk --include-words=week-$(@) --confirm
+	cnvsapi freshen canvas-details-from-disk --include-words=week-$(@)- --confirm
 	cnvsapi freshen canvas-frontpages-from-outline --include-weeks=$(@)
 
