--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false 
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python=">=3.13,<4.0.0"
 jupyter = "^1.0.0"
 matplotlib = "^3.8.2"
 plotly = "^5.23.0"
@@ -19,7 +19,7 @@ pandas = "^2.0.3"
 numpy = "^2.1.0"
 loguru = "^0.7.0"
 python-frontmatter = "^1.0.0"
-cnvsapi = {path = "./helpers/cnvsapi-0.9.28-py3-none-any.whl"}
+cnvsapi = {path = "./helpers/cnvsapi-0.9.30-py3-none-any.whl"}
 tasl = {path = "./helpers/tasl-0.2.6-py3-none-any.whl"}
 nbformat = "^5.9.2"
 matplotlib-venn = "^0.11.9"
