--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pandas = "^2.0.3"
 numpy = "^2.1.0"
 loguru = "^0.7.0"
 python-frontmatter = "^1.0.0"
-cnvsapi = {path = "./helpers/cnvsapi-0.9.39-py3-none-any.whl"}
+cnvsapi = {path = "./helpers/cnvsapi-0.9.40-py3-none-any.whl"}
 tasl = {path = "./helpers/tasl-0.2.7-py3-none-any.whl"}
 nbformat = "^5.9.2"
 matplotlib-venn = "^0.11.9"
@@ -31,6 +31,7 @@ text2qti = "^0.7.1"
 cryptography = "^43.0.3"
 click = "^8.1.8"
 markdown = "^3.7"
+duckdb = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core"]
