--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ cryptography = "^43.0.3"
 click = "^8.1.8"
 markdown = "^3.7"
 duckdb = "^1.3.2"
+itables = "^2.5.2"
 
 [build-system]
 requires = ["poetry-core"]
